k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecr-lab-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecr-lab-app
  template:
    metadata:
      labels:
        app: ecr-lab-app
    spec:
      imagePullSecrets:
        - name: ecr-secret

      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault

      resources:
        requests:
          cpu: "100m"
          memory: "128Mi"
        limits:
          cpu: "500m"
          memory: "256Mi"

      containers:
        - name: ecr-lab-app
          image: 696223520711.dkr.ecr.eu-central-1.amazonaws.com/ecr-lab-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
