k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecr-lab-service
spec:
  type: NodePort
  selector:
    app: ecr-lab-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30081
