k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecr-lab-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ecr-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecr-lab-service
                port:
                  number: 80
